--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teach Book Club</title>
+    <title>Tech Book Club</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    hello world!
+    <!-- HEADER -->
+    <header class="header">
+        <div class="header-container container">
+            <img src="./images/logo.svg" alt="" class="header-logo">
+        </div>
+    </header>
+
+
+
+    <!-- MAIN -->
+    <main class="main">
+        <div class="container">
+        </div>
+    </main>
+
+
+
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-container container">
+            <h2>Ready to debug your reading list?</h2>
+        </div>
+    </footer>
+
+
+
+
 </body>
 </html>
